unify websocket reliable transport
